--- a/php/src/style.css
+++ b/php/src/style.css
@@ -18,7 +18,7 @@ body{
     background-color: rgb(235, 184, 117);
 }
 
-.grid_container {
+/* .grid_container {
     display: grid;
     align-items: center;
     grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
@@ -26,15 +26,31 @@ body{
     grid-gap: 10px;
     background-color: rgb(235, 184, 117);
     padding: 10px;
-}
-/* .input_form{
-    display: flex;
-    padding: 10px;
-    align-items: center;
-}
-.form_group{
-    padding: 10px;
 } */
+
+.form{
+    margin-top: 20px;
+    margin-left: 40px;
+    margin-right: 40px;
+    padding: 10px;
+    border: 1px solid black;
+}
+
+input[type=text]{
+  width: 50%;
+  height: 110%;
+  padding: 5px;
+  margin-bottom: 5px;
+  border-radius: none;
+  border-top: none;
+  border-left: none;
+  border-right: none;
+  border-bottom: 1px solid black;
+}
+
+.form_group{
+  padding-bottom: 10px;
+}
 
 input[type=checkbox] {
     position: relative;
@@ -92,18 +108,6 @@ h2{
 
 #add_btn{
     background-color:rgb(76, 138, 62);
-}
-
-input[type=text]{
-    width: 100%;
-    height: 110%;
-    padding: 5px;
-    margin-bottom: 5px;
-    border-radius: none;
-    border-top: none;
-    border-left: none;
-    border-right: none;
-    border-bottom: 1px solid black;
 }
 
 
