--- a/php/src/style.css
+++ b/php/src/style.css
@@ -52,6 +52,41 @@ input[type=text]{
   padding-bottom: 10px;
 }
 
+table{
+  width: 80%;
+  margin: 30px auto;
+  
+  text-align: left;
+}
+tr {
+  border-bottom: 1px solid #cbcbcb;
+}
+th, td{
+  background-color: whitesmoke;
+  border: none;
+  height: 30px;
+  padding: 2px;
+}
+tr:hover {
+  background: #F5F5F5;
+}
+
+.edit_btn {
+  text-decoration: none;
+  padding: 2px 5px;
+  background: #2E8B57;
+  color: white;
+  border-radius: 3px;
+}
+
+.del_btn {
+  text-decoration: none;
+  padding: 2px 5px;
+  color: white;
+  border-radius: 3px;
+  background: #800000;
+}
+
 input[type=checkbox] {
     position: relative;
     float: right;
