--- a/php/src/style.css
+++ b/php/src/style.css
@@ -71,6 +71,15 @@ tr:hover {
   background: #F5F5F5;
 }
 
+.btn{
+    padding: 10px;
+    font-size: 15px;
+    color: white;
+    background: rgb(76, 138, 62);
+    border: none;
+    border-radius: 5px;
+}
+
 .edit_btn {
   text-decoration: none;
   padding: 2px 5px;
