--- a/php/src/style.css
+++ b/php/src/style.css
@@ -33,7 +33,7 @@ body{
     margin-left: 40px;
     margin-right: 40px;
     padding: 10px;
-    border: 1px solid black;
+    border: 2px solid whitesmoke;
 }
 
 input[type=text]{
